Use Twitter Bootstrap

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -4,11 +4,13 @@
 <html lang="ru">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Доступ запрещён</title>
+        <link rel="stylesheet" href="@routes.Assets.versioned("css/bootstrap/css/bootstrap.min.css")">
         <link rel="stylesheet" href="@routes.Assets.versioned("css/main.css")">
     </head>
     <body>
-        <div id="content">
+        <div class="container">
             @content
             <div id="sha256">caa1aedb2a6ce96b39b9fde1a49e1ebcb431b6da4586da0aef56df9b78221d60</div>
         </div>
