Specify styles in the config file

--- a/app/views/default.scala.html
+++ b/app/views/default.scala.html
@@ -1,4 +1,6 @@
-@main() {
+@(styles: String)
+
+@main(styles) {
 
     <div id="ru">Доступ к&nbsp;запрошенному вами ресурсу запрещён решением
         органов государственной власти Российской Федерации.</div>
