--- a/app/views/withDomain.scala.html
+++ b/app/views/withDomain.scala.html
@@ -1,6 +1,6 @@
-@(domain: String)
+@(domain: String, styles: String)
 
-@main() {
+@main(styles) {
 
     <div id="ru">Доступ к&nbsp;запрошенному вами ресурсу с&nbsp;домена <strong>@domain</strong> запрещён решением
         органов государственной власти Российской Федерации.</div>
