--- a/app/views/withUrl.scala.html
+++ b/app/views/withUrl.scala.html
@@ -1,6 +1,6 @@
-@(url: String)
+@(url: String, styles: String)
 
-@main() {
+@main(styles) {
 
     <div id="ru">Доступ к&nbsp;запрошенному вами ресурсу <strong>@url</strong> запрещён решением
         органов государственной власти Российской Федерации.</div>
